@@ -1,3 +1,13 @@
+Sun Aug  3 21:02:30 EDT 2003 Daniel Veillard <daniel@veillard.com>
+
+	* tree.c include/libxml/tree.h: added a new API to split a
+	  QName without generating any memory allocation
+	* valid.c: fixed another problem with namespaces on element
+	  in mixed content case
+	* python/tests/reader2.py: updated the testcase with 
+	  Bjorn Reese fix to reader for unsignificant white space
+	* parser.c HTMLparser.c: cleanup.
+
 Sun Aug  3 20:55:40 EDT 2003 Daniel Veillard <daniel@veillard.com>
 
 	* catalog.c: trying to fix #118754 of possible recursion in the
